--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
           <li><a href="products.html">Products </a></li>
           <li><a class="active" href="about.html">About </a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="signin.html">Login/Register</a></li>
           <li>
             <a href="#"><i title="Cart" class="fa-solid fa-cart-shopping"></i></a>
           </li>
