--- a/products.html
+++ b/products.html
@@ -21,6 +21,7 @@
           <li><a class="active" href="products.html">Products </a></li>
           <li><a href="about.html">About </a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="signin.html">Login/Register</a></li>
           <li>
             <a href="#"><i title="Cart" class="fa-solid fa-cart-shopping"></i></a>
           </li>
